--- a/Basics/HTML-JS/Js-Games/TicTacToe/style.css
+++ b/Basics/HTML-JS/Js-Games/TicTacToe/style.css
@@ -7,7 +7,7 @@
 body {
     background-color: #686256;
     display: flex;
-    /* justify-content: center; */
+    justify-content: center;
     margin-top: 1rem;
 }
 
